--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "lab9",
+  "name": "final-exam",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "parcel-bundler": "^1.12.4",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.4",
     "testcafe": "^1.8.4",
     "ws": "^7.2.0"
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
